# D

./: .gitignore  Dockerfile  QTO_AVERAGE_AREA_SUMMARY.txt  README.md  UAE_MASTER_QTO_ENGINE_V15.cpython-314.pyc.bak  ULTIMATE_QTO_ENGINE_V2.ts  ULTRA_MERGE_PROMPT_FIX_AR.md  agent1_spec_training_pack.json  agent3_boq_training_pack.json  asyncQueue.ts  docs_implementation_plan.md  equationSheetBible.test.ts  equationSheetBible.ts  pdfVectorToDxf.ts  project_corpus_summary.json  pyproject.toml  qto_ultimate_merge_pipeline.py  requirements.txt  rules.js  runArch.js  runStr.js  v15Export.ts  villaQtoEngine.test.ts  villaQtoTrustLogic.test.ts  villaQtoTrustedHeavy.test.ts
data/: QTO_TRAINING_FILES_IN_DOWNLOADS.txt  agent2_qto_training_pack.json  training.txt
legacy/: UAE_MASTER_QTO_ENGINE_V15.py
samples/: sample_input.json
src/: main.py
src/engine/: finishes.py  qto_engine.py
src/parsers/: pdf_parser.py
src/validation/: validator.py
ts/: ultraConflictMerge.ts  villaQtoEngine.ts
ts/runtime/: accuracyPolicy.js  dxfRuntimeUtils.js  quality.js  rules.js  runFinish.js  wallRuntimeUtils.js
